--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,5 +25,15 @@
 	"postCreateCommand": "sh .devcontainer/post-create.sh",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode"
+	"remoteUser": "vscode",
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"sissel.shopify-liquid",
+				"fisheva.eva-theme",
+				"GitHub.copilot-nightly",
+				"rebornix.ruby"
+			]
+		}
+	}
 }
