update: add extentions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,14 @@
 				"timdmackey.mechanic-liquid",
 				"fisheva.eva-theme",
 				"GitHub.copilot-nightly",
-				"rebornix.ruby"
+				"rebornix.ruby",
+				"GitHub.vscode-pull-request-github",
+				"gitpod.gitpod-remote-ssh",
+				"znck.grammarly",
+				"redhat.vscode-yaml",
+				"michelemelluso.gitignore",
+				"mbessey.vscode-rufo",
+				"wingrunr21.vscode-ruby"
 			]
 		}
 	}
