--- a/_config.yml
+++ b/_config.yml
@@ -37,3 +37,5 @@ plugins:
   - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 timezone: Asia/Shanghai
+
+repository: thiswind/thiswind.github.io
