--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,14 @@
 {
 	"name": "Ubuntu with Ruby 3.1",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/jekyll"
+	"image": "mcr.microsoft.com/devcontainers/jekyll",
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"rjmacarthy.twinny"
+			]
+		}
+	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
