--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,11 @@ remote_theme: pages-themes/hacker@v0.2.0
 plugins:
   - jekyll-feed
   - jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-assets
+
 
 timezone: Asia/Shanghai
 
 repository: thiswind/thiswind.github.io
+
+author: thiswind
