--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"rjmacarthy.twinny"
+				"rjmacarthy.twinny",
+				"github.vscode-github-actions"
 			]
 		}
 	}
